# Advent_of_Code_2020

./: README.md
day_1/: Cargo.toml
day_1/src/: main.rs
day_11/: Cargo.toml
day_11/benches/: benchmark.rs
day_11/src/: main.rs
day_12/: Cargo.toml  TODO  out
day_12/benches/: benchmark.rs
day_12/src/: main.rs
day_2/: Cargo.toml
day_2/src/: main.rs
day_3/: Cargo.toml
day_3/benches/: my_benchmark.rs
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/benches/: benchmark.rs
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/benches/: benchmark.rs
day_5/src/: main.rs
day_6/: Cargo.toml
day_6/benches/: benchmark.rs
day_6/src/: main.rs
day_7/: Cargo.toml
day_7/benches/: benchmark.rs
day_7/src/: main.rs  main.rs.bk
day_8/: Cargo.toml
day_8/src/: main.rs
