[package]
name = "day_3"
version = "0.1.0"
authors = ["Fergus Molloy <fdm504@york.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]

[[bench]]
name = "my_benchmark"
harness = false
